--- a/V_css/V_index.css
+++ b/V_css/V_index.css
@@ -2,6 +2,7 @@
   height: 64px;
   margin-bottom: 30px !important;
   border-radius: 0px !important;
+  background-color: white;
 }
 div.container{
   margin-top: 8px;
@@ -14,14 +15,90 @@ div.container{
   background-color: white !important;
 }
 .bak{
-  background-color: black;
+  background-color: rgb(27, 27, 27);
 }
-.bakcol{
+/******************************/
+@media only screen and (max-width: 1440px){
+  .navbar-header a>img{
+    width: 250px;
+  } 
+}
+@media only all and (max-width: 992px) {
+  .navbar-header a>img{
+    width: 200px !important;
+  }
+  .navbar-header a{
+    padding-top: 13px;
+  } 
+}
+.navbar-header a>img{
+  width: 250px;
+} 
+.navbar-header a{
+  padding-top: 13px;
+}
+#Volley_nev{
   background-color: white;
+  text-align: center;
+}
+.carousel-indicators li {
+  border-radius: 0px !important;
+  width: 60px !important;
+  height: 6px !important;
+}
+#V_carousel_size{
+  padding: 5px;
+}
+/**************************/
+body.bak> div.container{
+  padding: 0px;
+}
+
+#well_block1{
+  border-radius: 0px;
+  border-color: white;
+  background-color: white !important;
+  height: 147px;
+  padding: 10px;
+} 
+#well_block2{
+  border-radius: 0px;
+  border-color: white;
+  background-color: white !important;
+  height: 268.6px;
+  padding: 10px;
+} 
+
+article .panel{
+  margin: 0px;
 }
 .bakcol2{
-  background-color: #F06E6E
+  background-color: #F06E6E;
 }
+div.tab-pane{
+  width: 457.8px !important;
+  margin: 0 auto !important;
+  margin-top: 15px !important;
+}
+#content2_V{
+  border: #F06E6E 2px solid;
+  border-left: #F06E6E 1px solid !important;
+}
+#content1_V{
+  border: #F06E6E 2px solid;
+  border-right: #F06E6E 1px solid;
+}
+#content1_V_poto{
+  border: #F06E6E 2px solid;
+  border-right: #F06E6E 1px solid;
+  height: 246.6px;
+}
+#V_tab_content{
+  height: 155.6px;
+}
+/****************************/
+
+
 .poto{
   width: 150px;
   height: 150px;
@@ -43,11 +120,7 @@ div.container{
   text-align: center;
 }
 
-.carousel-indicators li {
-  border-radius: 0px !important;
-  width: 60px !important;
-  height: 6px !important;
-}
+
 @media only screen and (min-width : 320px) {
 .mar1{
   margin-top: 3%;
@@ -63,7 +136,7 @@ div.container{
 .poto5{
   width: 100%;
   height: 600px !important;
-  filter: brightness(70%);
+  filter: brightness(90%);
 }
 .poto6{
   width: 100%;
@@ -83,6 +156,13 @@ a.carousel-control{
 }
 a:active{
   color: pink;
+}
+#V_Tab_block{
+  width:300px;
+  margin: 0 auto;
+}
+#V_Tab_events{
+  width:300px;
 }
 @media only screen and (min-width : 900px) {
   .mar1{
