--- a/V_css/V_Rule_Outline.css
+++ b/V_css/V_Rule_Outline.css
@@ -1,36 +1,43 @@
-.sidenav {
-    width: 130px;
-    position: fixed;
-    z-index: 1;
-    top:125px;
-    left: 20px;
-    background: white;
-    overflow-x: hidden;
-    padding: 8px 0;
-  }
-  
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #555;
-    display: block;
-  }
-  
-  .sidenav a:hover {
-    color: #064579;
-  }
-  
-  .main {
-    margin-left: 140px; /* Same width as the sidebar + left position in px */
-    font-size: 28px; /* Increased text to enable scrolling */
-    padding: 0px 10px;
-  }
-  
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+
   #Rule_outline_main{
       height: 600px;
+  }
+  #Outline_block1{
+    padding: 30px;
+  }
+  #Outline_block2{
+    padding: 30px;
+  }
+  #Outline_block2 a{
+    color: #555;
+  }
+  #sidebar {
+    width: 260px;
+    padding: 20px;
+    margin-bottom: 20px;
+    float: left;
+    border: 1px solid #bcbcbc;
+  }
+  #content {
+    width: 910px;
+    height: 648px;
+    padding: 20px;
+    margin-bottom: 20px;
+    float: left;
+    border: 1px solid #bcbcbc;
+  }
+  @media only all and (max-width: 1200px) {
+    #sidebar{
+      width: 910px;
+      text-align: center;
+    }
+  }
+  @media only all and (max-width: 992px) {
+    #sidebar{
+      width: 750px;
+      text-align: center;
+    }
+    #content{
+      width: 750px;
+    }
   }
