--- a/V_css/V_Rule_Outline.css
+++ b/V_css/V_Rule_Outline.css
@@ -3,32 +3,55 @@
       height: 600px;
   }
   #Outline_block1{
-    padding: 30px;
+    padding: 30px 30px 10px 30px;
+  }
+  #Outline_block1 p{
+    color: #555;
+    font-weight: 500;
   }
   #Outline_block2{
-    padding: 30px;
+    padding: 10px 30px 30px 30px;
   }
   #Outline_block2 a{
     color: #555;
   }
   #sidebar {
-    width: 260px;
+    width: 200px;
     padding: 20px;
     margin-bottom: 20px;
     float: left;
-    border: 1px solid #bcbcbc;
+    border: 1px solid #F06E6E;
   }
+  #sidebar ul{
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+  }
+  #sidebar ul li a{
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+  }
+  #sidebar ul li{
+    background:#555;
+    margin: 10px;
+  }
+  #sidebar ul li a.active{
+    color: #F06E6E !important;
+  }
+
   #content {
-    width: 910px;
-    height: 648px;
-    padding: 20px;
+    width: 970px;
+    height: 626px;
+    padding: 10px;
     margin-bottom: 20px;
     float: left;
-    border: 1px solid #bcbcbc;
+    border: 1px solid #F06E6E;
   }
   @media only all and (max-width: 1200px) {
     #sidebar{
-      width: 910px;
+      width: 970px;
       text-align: center;
     }
   }
